@@ -1,3 +1,11 @@
+2020-04-04 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c,
+	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_from_int_subtraction_auto_xy.c,
+	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_from_int_subtraction_auto_yx.c,
+	  support/regression/tests/mm-pnvi-ae-udi-pointer_offset_xor_auto.c:
+	  Fix bug #2990.
+
 2020-04-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2.c,
